--- a/vallett-se.css
+++ b/vallett-se.css
@@ -3,7 +3,7 @@
 }
 
 .top-margin {
-    margin-top: 2em;
+    margin-top: 1rem;
 }
 
 button {
@@ -13,4 +13,8 @@ button {
 
 .links button {
     margin-left: 1rem;
+}
+
+.rounded_image {
+    border-radius: 50%;
 }
